HelloUltraviolet/Fixtures/RejectedSource/Modules/UsingListDuplicate/Source/Provider/Values.uv
//! Provider module for using declaration rejection specimens.

public procedure exportedValue() -> i32 {
    return 1
}
